chore: improve linter
All files containing code should now be linted. Some adjustments have
been made. The lint script also takes no arguments anymore.

--- a/modules/const/package.json
+++ b/modules/const/package.json
@@ -12,7 +12,7 @@
   "main": "./dist/const.cjs",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "lint-yafu *.js",
+    "lint": "lint-yafu",
     "prepublishOnly": "pnpm clean && pnpm transpile",
     "test": "pnpm lint",
     "transpile": "rollup -c"
