--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -27,7 +27,7 @@
     "acceptance": "mocha testrunners/acceptance",
     "clean": "rm -rf dist",
     "jsdoc": "jsdoc -c jsdoc.json lib",
-    "lint": "lint-yafu lib test",
+    "lint": "lint-yafu",
     "prepublishOnly": "pnpm clean && pnpm run transpile",
     "test": "node build/create-test-index && pnpm transpile && pnpm unit && pnpm acceptance; rm -f test/index.js",
     "transpile": "mkdir -p dist && node build/create-index.js && rollup -c",
