--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -18,7 +18,7 @@
   "module": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "lint-yafu lib test *.js",
+    "lint": "lint-yafu",
     "prepublishOnly": "pnpm clean && pnpm transpile",
     "pretest": "pnpm i",
     "test": "pnpm unit",
