--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -29,7 +29,7 @@
     "jsdoc": "jsdoc -c jsdoc.json lib",
     "lint": "lint-yafu",
     "prepublishOnly": "pnpm clean && pnpm run transpile",
-    "test": "node build/create-test-index && pnpm transpile && pnpm unit && pnpm acceptance; rm -f test/index.js",
+    "test": "node build/create-test-index && pnpm transpile && pnpm unit && pnpm acceptance && rm -f test/index.js",
     "transpile": "mkdir -p dist && node build/create-index.js && rollup -c",
     "unit": "mocha testrunners/unit"
   },
