--- a/modules/const/package.json
+++ b/modules/const/package.json
@@ -21,9 +21,9 @@
     "fantasy-land": "^5.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "rollup": "^2.77.2"
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "rollup": "^2.79.1"
   },
   "publishConfig": {
     "access": "public"
