--- a/modules/create-rollup-config/package.json
+++ b/modules/create-rollup-config/package.json
@@ -9,12 +9,12 @@
   },
   "main": "./create-rollup-config.js",
   "dependencies": {
-    "@yafu/rollup-plugin-curry": "^1.0.3",
-    "esbuild": "^0.14.51",
-    "rollup": "^2.77.2",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-esbuild": "^4.9.1",
-    "rollup-plugin-ts": "^2.0.5",
-    "typescript": "^4.6.3"
+    "@yafu/rollup-plugin-curry": "workspace:^1.0.3",
+    "esbuild": "^0.15.13",
+    "rollup": "^2.79.1",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-ts": "^3.0.2",
+    "typescript": "^4.8.4"
   }
 }
