--- a/modules/curry/package.json
+++ b/modules/curry/package.json
@@ -20,13 +20,13 @@
     "unit": "mocha"
   },
   "devDependencies": {
-    "@types/node": "^18.6.3",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
-    "rollup": "^2.77.2",
+    "@types/node": "^18.11.9",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "rollup": "^2.79.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.8.4"
   },
   "publishConfig": {
     "access": "public"
