--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -29,28 +29,28 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@yafu/curry": "^1.2.3",
-    "@yafu/fantasy-types": "^1.0.4",
-    "@yafu/type-utils": "^1.0.3",
+    "@yafu/curry": "workspace:^1.2.3",
+    "@yafu/fantasy-types": "workspace:^1.0.4",
+    "@yafu/type-utils": "workspace:^1.0.3",
     "fantasy-land": "^5.0.0",
-    "yafu": "^2.0.4"
+    "yafu": "workspace:^2.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@types/node": "^18.6.3",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "@yafu/rollup-plugin-curry": "^1.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@types/node": "^18.11.9",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "@yafu/rollup-plugin-curry": "workspace:^1.0.3",
     "babel-plugin-add-module-exports": "^1.0.4",
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
-    "rollup": "^2.77.2",
-    "rollup-plugin-ts": "^2.0.5",
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-ts": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.8.4"
   },
   "publishConfig": {
     "access": "public"
