--- a/modules/identity/package.json
+++ b/modules/identity/package.json
@@ -17,14 +17,14 @@
     "transpile": "rollup -c"
   },
   "dependencies": {
-    "@yafu/fantasy-types": "^1.0.4",
+    "@yafu/fantasy-types": "workspace:^1.0.4",
     "fantasy-land": "^5.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@yafu/create-rollup-config": "^1.0.4",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "rollup": "^2.77.2"
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@yafu/create-rollup-config": "workspace:^1.0.4",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "rollup": "^2.79.1"
   },
   "publishConfig": {
     "access": "public"
