--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -19,29 +19,29 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@yafu/const": "^1.1.4",
-    "@yafu/curry": "^1.2.3",
-    "@yafu/either": "^1.0.4",
-    "@yafu/fantasy-functions": "^2.0.4",
-    "@yafu/fantasy-types": "^1.0.4",
-    "@yafu/identity": "^2.0.4",
-    "yafu": "^2.0.4"
+    "@yafu/const": "workspace:^1.1.4",
+    "@yafu/curry": "workspace:^1.2.3",
+    "@yafu/either": "workspace:^1.0.4",
+    "@yafu/fantasy-functions": "workspace:^2.0.4",
+    "@yafu/fantasy-types": "workspace:^1.0.4",
+    "@yafu/identity": "workspace:^2.0.4",
+    "yafu": "workspace:^2.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^18.6.3",
-    "@yafu/create-rollup-config": "^1.0.4",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
-    "rollup": "^2.77.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.9",
+    "@yafu/create-rollup-config": "workspace:^1.0.4",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "rollup": "^2.79.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.8.4"
   },
   "publishConfig": {
     "access": "public"
