--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -18,29 +18,29 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/traverse": "^7.18.10",
-    "@babel/types": "^7.18.10",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/traverse": "^7.20.1",
+    "@babel/types": "^7.20.2",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.0",
     "estree-walker": "^3.0.1",
     "ramda": "^0.28.0",
-    "recast": "^0.21.1"
+    "recast": "^0.21.5"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/babel__core": "^7.1.19",
-    "@types/babel__traverse": "^7.14.2",
-    "@types/node": "^18.6.3",
-    "@types/ramda": "^0.28.8",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
-    "rollup": "^2.77.2",
-    "rollup-plugin-ts": "^2.0.7",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/babel__core": "^7.1.20",
+    "@types/babel__traverse": "^7.18.2",
+    "@types/node": "^18.11.9",
+    "@types/ramda": "^0.28.20",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-ts": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "@yafu/curry": "^1.0.0"
