--- a/modules/sort-dependencies/package.json
+++ b/modules/sort-dependencies/package.json
@@ -16,12 +16,12 @@
     "transpile": "pnpm rollup -c"
   },
   "dependencies": {
-    "minimist": "^1.2.6",
+    "minimist": "^1.2.7",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "rollup": "^2.77.2"
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "rollup": "^2.79.1"
   }
 }
