--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -26,19 +26,19 @@
     "unit": "mocha --esm"
   },
   "dependencies": {
-    "@yafu/curry": "^1.2.3",
-    "yafu": "^2.0.4"
+    "@yafu/curry": "workspace:^1.2.3",
+    "yafu": "workspace:^2.0.4"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/node": "^18.6.3",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "chai": "^4.3.6",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/node": "^18.11.9",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "chai": "^4.3.7",
     "glob": "^8.0.3",
-    "mocha": "^10.0.0",
-    "rollup": "^2.77.2",
+    "mocha": "^10.1.0",
+    "rollup": "^2.79.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.8.4"
   },
   "publishConfig": {
     "access": "public"
