--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -34,30 +34,30 @@
     "unit": "mocha testrunners/unit"
   },
   "dependencies": {
-    "@yafu/curry": "^1.2.3"
+    "@yafu/curry": "workspace:^1.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/node": "^18.6.3",
-    "@yafu/eslint-config-yafu": "^1.1.2",
-    "@yafu/rollup-plugin-curry": "^1.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/node": "^18.11.9",
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "@yafu/rollup-plugin-curry": "workspace:^1.0.3",
     "babel-plugin-add-module-exports": "^1.0.4",
-    "camel-case": "^4.1.1",
-    "chai": "^4.3.6",
+    "camel-case": "^4.1.2",
+    "chai": "^4.3.7",
     "glob": "^8.0.3",
-    "jsdoc": "^3.6.11",
-    "mocha": "^10.0.0",
-    "rollup": "^2.77.2",
+    "jsdoc": "^4.0.0",
+    "mocha": "^10.1.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
-    "sort-dependencies": "^1.0.3",
+    "sort-dependencies": "workspace:^1.0.3",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3",
-    "yaml": "^2.1.1"
+    "typescript": "^4.8.4",
+    "yaml": "^2.1.3"
   },
   "publishConfig": {
     "access": "public"
