--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "transpile": "pnpm run -r transpile"
   },
   "devDependencies": {
-    "@yafu/eslint-config-yafu": "^1.0.2",
-    "lerna": "^5.3.0",
-    "yaml": "^2.1.1"
+    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "lerna": "^6.0.3",
+    "yaml": "^2.1.3"
   }
 }
