--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -14,6 +14,7 @@
   "author": "Ludwig Magnusson",
   "type": "module",
   "exports": {
+    "types": "./dist/index.d.ts",
     "import": "./dist/index.js",
     "require": "./dist/cjs/yafu.cjs"
   },
