--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -33,7 +33,7 @@
     "unit": "mocha testrunners/unit"
   },
   "dependencies": {
-    "@yafu/curry": "workspace:^1.2.4"
+    "@yafu/curry": "^1.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -41,8 +41,8 @@
     "@babel/register": "^7.18.9",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/node": "^18.11.9",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
-    "@yafu/rollup-plugin-curry": "workspace:^1.0.4",
+    "@yafu/eslint-config-yafu": "^1.1.3",
+    "@yafu/rollup-plugin-curry": "^1.0.4",
     "babel-plugin-add-module-exports": "^1.0.4",
     "camel-case": "^4.1.2",
     "chai": "^4.3.7",
@@ -52,7 +52,7 @@
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
-    "sort-dependencies": "workspace:^1.0.4",
+    "sort-dependencies": "^1.0.4",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
