--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -14,10 +14,12 @@
   "author": "Ludwig Magnusson",
   "type": "module",
   "exports": {
-    "types": "./dist/index.d.ts",
-    "import": "./dist/index.js",
+    "types": "./dist/ts/types.d.ts",
+    "import": "./dist/es/yafu.js",
     "require": "./dist/cjs/yafu.cjs"
   },
+  "main": "./dist/es/yafu.js",
+  "types": "./dist/ts/types.d.ts",
   "files": [
     "dist",
     "lib"
@@ -50,6 +52,7 @@
     "jsdoc": "^4.0.0",
     "mocha": "^10.1.0",
     "rollup": "^2.79.1",
+    "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
     "sort-dependencies": "^1.0.4",
