--- a/modules/maybe/package.json
+++ b/modules/maybe/package.json
@@ -19,9 +19,9 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@yafu/curry": "workspace:^1.2.4",
-    "@yafu/fantasy-functions": "workspace:^2.0.8",
-    "@yafu/type-utils": "workspace:^1.0.4",
+    "@yafu/curry": "^1.2.4",
+    "@yafu/fantasy-functions": "^2.0.8",
+    "@yafu/type-utils": "^1.0.4",
     "fantasy-land": "^5.0.0"
   },
   "devDependencies": {
@@ -29,8 +29,8 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
-    "@yafu/create-rollup-config": "workspace:^1.1.0",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
+    "@yafu/create-rollup-config": "^1.1.0",
+    "@yafu/eslint-config-yafu": "^1.1.3",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
     "rollup": "^2.79.1",
