--- a/modules/const/package.json
+++ b/modules/const/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
+    "@yafu/eslint-config-yafu": "^1.1.3",
     "rollup": "^2.79.1"
   },
   "publishConfig": {
