--- a/modules/curry/package.json
+++ b/modules/curry/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
+    "@yafu/eslint-config-yafu": "^1.1.3",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
     "rollup": "^2.79.1",
