--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -29,11 +29,11 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@yafu/curry": "workspace:^1.2.4",
-    "@yafu/fantasy-types": "workspace:^1.0.5",
-    "@yafu/type-utils": "workspace:^1.0.4",
+    "@yafu/curry": "^1.2.4",
+    "@yafu/fantasy-types": "^1.0.5",
+    "@yafu/type-utils": "^1.0.4",
     "fantasy-land": "^5.0.0",
-    "yafu": "workspace:^2.0.11"
+    "yafu": "^2.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -42,8 +42,8 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.1",
     "@types/node": "^18.11.9",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
-    "@yafu/rollup-plugin-curry": "workspace:^1.0.4",
+    "@yafu/eslint-config-yafu": "^1.1.3",
+    "@yafu/rollup-plugin-curry": "^1.0.4",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
