--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -19,13 +19,13 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@yafu/const": "workspace:^1.1.5",
-    "@yafu/curry": "workspace:^1.2.4",
-    "@yafu/either": "workspace:^1.0.8",
-    "@yafu/fantasy-functions": "workspace:^2.0.8",
-    "@yafu/fantasy-types": "workspace:^1.0.5",
-    "@yafu/identity": "workspace:^2.0.5",
-    "yafu": "workspace:^2.0.11"
+    "@yafu/const": "^1.1.5",
+    "@yafu/curry": "^1.2.4",
+    "@yafu/either": "^1.0.8",
+    "@yafu/fantasy-functions": "^2.0.8",
+    "@yafu/fantasy-types": "^1.0.5",
+    "@yafu/identity": "^2.0.5",
+    "yafu": "^2.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -35,8 +35,8 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
-    "@yafu/create-rollup-config": "workspace:^1.1.0",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
+    "@yafu/create-rollup-config": "^1.1.0",
+    "@yafu/eslint-config-yafu": "^1.1.3",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
     "rollup": "^2.79.1",
