--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -34,7 +34,7 @@
     "@types/babel__traverse": "^7.18.2",
     "@types/node": "^18.11.9",
     "@types/ramda": "^0.28.20",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
+    "@yafu/eslint-config-yafu": "^1.1.3",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
     "rollup": "^2.79.1",
