--- a/modules/sort-dependencies/package.json
+++ b/modules/sort-dependencies/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@yafu/eslint-config-yafu": "workspace:^1.1.3",
+    "@yafu/eslint-config-yafu": "^1.1.3",
     "rollup": "^2.79.1"
   }
 }
