--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "transpile": "pnpm run -r transpile"
   },
   "devDependencies": {
-    "@yafu/eslint-config-yafu": "workspace:^1.1.2",
+    "@yafu/eslint-config-yafu": "^1.1.2",
     "lerna": "^6.0.3",
     "yaml": "^2.1.3"
   }
