--- a/modules/either/package.json
+++ b/modules/either/package.json
@@ -6,6 +6,7 @@
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "type": "module",
   "exports": {
+    "types": "./dist/types.d.ts",
     "import": "./dist/es/either.js",
     "require": "./dist/cjs/either.cjs"
   },
@@ -24,7 +25,7 @@
     "@yafu/fantasy-functions": "^2.0.9",
     "@yafu/fantasy-types": "^1.0.6",
     "@yafu/type-utils": "^1.0.4",
-    "fantasy-land": "^5.0.0"
+    "fantasy-land": "^5.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -35,9 +36,9 @@
     "@yafu/eslint-config-yafu": "^1.1.3",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
-    "rollup": "^2.79.1",
+    "rollup": "^3.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "publishConfig": {
     "access": "public"
