--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -5,6 +5,7 @@
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "type": "module",
   "exports": {
+    "types": "./dist/ts/fantasy-functions.d.ts",
     "import": "./dist/es/fantasy-functions.js",
     "require": "./dist/cjs/fantasy-functions-development.cjs"
   },
@@ -32,7 +33,7 @@
     "@yafu/curry": "^1.2.5",
     "@yafu/fantasy-types": "^1.0.6",
     "@yafu/type-utils": "^1.0.4",
-    "fantasy-land": "^5.0.0",
+    "fantasy-land": "^5.0.1",
     "yafu": "^2.0.12"
   },
   "devDependencies": {
@@ -40,17 +41,17 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/node": "^18.11.9",
     "@yafu/eslint-config-yafu": "^1.1.3",
     "@yafu/rollup-plugin-curry": "^1.0.5",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
-    "rollup": "^2.79.1",
+    "rollup": "^3.8.0",
     "rollup-plugin-ts": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "publishConfig": {
     "access": "public"
