--- a/modules/fantasy-types/package.json
+++ b/modules/fantasy-types/package.json
@@ -6,6 +6,7 @@
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "type": "module",
   "exports": {
+    "types": "./dist/types.d.ts",
     "import": "./dist/es/fantasy-types.js",
     "require": "./dist/cjs/fantasy-types.cjs"
   },
@@ -21,15 +22,15 @@
   "dependencies": {
     "@yafu/curry": "^1.2.5",
     "@yafu/type-utils": "^1.0.4",
-    "fantasy-land": "^5.0.0"
+    "fantasy-land": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@yafu/create-rollup-config": "^1.1.1",
     "@yafu/rollup-plugin-curry": "^1.0.5",
-    "rollup": "^2.79.1",
+    "rollup": "^3.8.0",
     "rollup-plugin-ts": "^3.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "publishConfig": {
     "access": "public"
