--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -18,29 +18,30 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@babel/core": "^7.20.2",
+    "@babel/core": "^7.20.7",
     "@babel/preset-typescript": "^7.18.6",
-    "@babel/traverse": "^7.20.1",
-    "@babel/types": "^7.20.2",
+    "@babel/traverse": "^7.20.7",
+    "@babel/types": "^7.20.7",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
     "estree-walker": "^3.0.1",
     "ramda": "^0.28.0",
-    "recast": "^0.21.5"
+    "recast": "^0.22.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/babel__core": "^7.1.20",
-    "@types/babel__traverse": "^7.18.2",
+    "@types/babel__traverse": "^7.18.3",
     "@types/node": "^18.11.9",
     "@types/ramda": "^0.28.20",
     "@yafu/eslint-config-yafu": "^1.1.3",
     "chai": "^4.3.7",
+    "esbuild": "^0.15.13",
     "mocha": "^10.1.0",
-    "rollup": "^2.79.1",
-    "rollup-plugin-ts": "^3.0.2",
+    "rollup": "^3.8.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "@yafu/curry": "^1.0.0"
