--- a/nx.json
+++ b/nx.json
@@ -4,6 +4,7 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
+        "parallel": 15,
         "cacheableOperations": [
           "lint",
           "prepublishOnly",
