--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -24,7 +24,7 @@
     "generateTs": "node --loader ts-node/esm scripts/new-ts.ts > dist/ts/fantasy-functions.ts",
     "lint": "lint-yafu",
     "prepublishOnly": "pnpm clean && pnpm transpile && pnpm test",
-    "test": "pnpm lint && pnpm unit",
+    "test": "pnpm unit",
     "transpile": "pnpm tsgen && rollup -c",
     "tsgen": "mkdir -p dist/ts && pnpm generate > dist/ts/fantasy-functions.ts",
     "unit": "mocha"
