--- a/modules/fantasy-array-polyfill/package.json
+++ b/modules/fantasy-array-polyfill/package.json
@@ -42,5 +42,8 @@
     "rollup": "^3.8.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.6.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
