--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -6,10 +6,12 @@
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "type": "module",
   "exports": {
+    "types": "./dist/types.d.ts",
     "import": "./dist/es/index.js",
     "require": "./dist/cjs/index.cjs"
   },
   "main": "./dist/cjs/index.cjs",
+  "types": "./dist/types.d.ts",
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "lint-yafu",
