--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -5,10 +5,12 @@
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "type": "module",
   "exports": {
-    "import": "./dist/es/plugin.mjs",
+    "types": "./dist/types.d.ts",
+    "import": "./dist/es/plugin.js",
     "require": "./dist/cjs/plugin.cjs"
   },
   "main": "./dist/cjs/plugin.cjs",
+  "types": "./dist/types.d.ts",
   "scripts": {
     "clean": "rm -rf dist/",
     "lint": "lint-yafu",
@@ -39,6 +41,7 @@
     "esbuild": "^0.16.10",
     "mocha": "^10.2.0",
     "rollup": "^3.8.0",
+    "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
