--- a/modules/curry/package.json
+++ b/modules/curry/package.json
@@ -21,12 +21,12 @@
     "unit": "mocha"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@types/node": "^18.11.18",
     "@yafu/eslint-config-yafu": "^1.1.4",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "rollup": "^3.10.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
