--- a/modules/fantasy-array-polyfill/package.json
+++ b/modules/fantasy-array-polyfill/package.json
@@ -31,6 +31,7 @@
     "fantasy-land": "^5.0.1"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^10.0.1",
@@ -40,7 +41,6 @@
     "eslint": "^8.32.0",
     "mocha": "^10.0.0",
     "rollup": "^3.10.1",
-    "ts-node": "^10.8.2",
     "typescript": "^4.6.3"
   },
   "publishConfig": {
