--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -21,7 +21,7 @@
     "clean": "rm -rf dist",
     "generate": "pnpm generateEs & pnpm generateTs",
     "generateEs": "node scripts/generate-module.js",
-    "generateTs": "node --loader ts-node/esm scripts/new-ts.ts > dist/ts/fantasy-functions.ts",
+    "generateTs": "node --loader @esbuild-kit/esm-loader scripts/new-ts.ts > dist/ts/fantasy-functions.ts",
     "lint": "lint-yafu",
     "prepublishOnly": "pnpm clean && pnpm transpile && pnpm test",
     "test": "pnpm unit",
@@ -40,6 +40,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
     "@types/node": "^18.11.18",
@@ -50,7 +51,6 @@
     "mocha": "^10.2.0",
     "rollup": "^3.10.1",
     "rollup-plugin-ts": "^3.1.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
