--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
@@ -42,7 +43,6 @@
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "rollup": "^3.10.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
