--- a/modules/maybe/package.json
+++ b/modules/maybe/package.json
@@ -27,6 +27,7 @@
     "fantasy-land": "^5.0.1"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
@@ -36,7 +37,6 @@
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "rollup": "^3.10.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
