--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -30,6 +30,7 @@
     "yafu": "^2.0.14"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/node": "^18.11.18",
     "@yafu/eslint-config-yafu": "^1.1.4",
@@ -37,7 +38,6 @@
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "rollup": "^3.10.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
