--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -48,6 +48,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/node": "^18.11.18",
     "@yafu/eslint-config-yafu": "^1.1.4",
@@ -64,7 +65,6 @@
     "rollup-plugin-ts": "^3.1.1",
     "sort-dependencies": "^1.0.6",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "yaml": "^2.2.1"
   },
