--- a/modules/sort-dependencies/package.json
+++ b/modules/sort-dependencies/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@yafu/create-rollup-config": "^1.1.3",
     "@yafu/eslint-config-yafu": "^1.1.4",
     "rollup": "^3.10.1"
   }
