--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ commands:
     steps:
       - run:
           name: Install pnpm
-          command: npm install -g pnpm
+          command: command -v pnpm || npm install -g pnpm
   install:
     steps:
       - run:
@@ -84,4 +84,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              node-version: [ '14.19', '16.15' ]
+              node-version: [ '16.20' ]
