chore: print node version when running circleci tests
This is to be able to debug cached hits and misses better.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ commands:
   install:
     steps:
       - run:
+          name: Print node version
+          command: node -v
+      - run:
           name: Set auth token
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
       - restore_cache:
