--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,15 +47,23 @@ commands:
       - run:
           command: cd modules/test-all-exports && pnpm verify
           name: Verify exports
-  sort-package-json:
+  install-utils:
     steps:
       - run:
-          command: npm add -g sort-package-json
-          name: Install sort-package-json
+          command: npm add -g sort-package-json prettier
+          name: Install sort-package-json and prettier
+  sort-package-json:
+    steps:
       - run:
           command: |
             git ls-files | grep package.json | xargs sort-package-json --check
           name: Verify package jsons sorted
+  prettier:
+    steps:
+      - run:
+          command: |
+            git ls-files | grep '.ts$' | xargs prettier --check
+          name: Run prettier
 jobs:
   test:
     parameters:
@@ -78,7 +86,9 @@ jobs:
     steps:
       - checkout
       - install-pnpm
+      - install-utils
       - sort-package-json
+      - prettier
 
 workflows:
   test-all:
