--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -48,9 +48,11 @@
     "@yafu/rollup-plugin-curry": "^1.0.7",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chai": "^4.3.7",
+    "esbuild": "^0.17.15",
     "mocha": "^10.2.0",
     "rollup": "^3.20.2",
-    "rollup-plugin-ts": "^3.2.0",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "typescript": "^5.0.3"
   },
   "publishConfig": {
