--- a/modules/fantasy-types/package.json
+++ b/modules/fantasy-types/package.json
@@ -29,8 +29,9 @@
     "@types/node": "^18.11.18",
     "@yafu/create-rollup-config": "^1.1.3",
     "@yafu/rollup-plugin-curry": "^1.0.7",
+    "esbuild": "^0.17.15",
     "rollup": "^3.20.2",
-    "rollup-plugin-ts": "^3.2.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "typescript": "^5.0.3"
   },
   "publishConfig": {
