--- a/modules/fantasy-types/package.json
+++ b/modules/fantasy-types/package.json
@@ -14,11 +14,11 @@
   "types": "./dist/types.d.ts",
   "scripts": {
     "clean": "rm -rf dist",
-    "generate": "node dist/generate-ts-modules.js > dist/fantasy-types.ts",
+    "generate": "mkdir -p dist && node --loader @esbuild-kit/esm-loader scripts/tsgen.ts > dist/fantasy-types.ts",
     "lint": "tsc --noEmit dist/*.ts",
     "prepublishOnly": "pnpm clean && pnpm transpile && pnpm test",
     "test": "echo testless",
-    "transpile": "rollup -c rollup.script.config.js && pnpm generate && rollup -c"
+    "transpile": "pnpm generate && rollup -c"
   },
   "dependencies": {
     "@yafu/curry": "^1.2.6",
@@ -26,12 +26,11 @@
     "fantasy-land": "^5.0.1"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.5.4",
     "@types/node": "^18.11.18",
     "@yafu/create-rollup-config": "^1.1.3",
     "@yafu/rollup-plugin-curry": "^1.0.7",
-    "esbuild": "^0.17.15",
     "rollup": "^3.20.2",
-    "rollup-plugin-esbuild": "^5.0.0",
     "typescript": "^5.0.3"
   },
   "publishConfig": {
