chore: ignore d.ts files when running prettier
Formatting them creates problems with currying in transpilation.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ commands:
     steps:
       - run:
           command: |
-            git ls-files | grep '.ts$' | xargs prettier --check
+            prettier **/*.ts --check 
           name: Run prettier
 jobs:
   test:
