fix: fix all type errors
This installs typescript globally and removes it locally from all
packages. Typescript has also been upgraded to the latest version. After
this all type error have been fixed.

--- a/modules/maybe/package.json
+++ b/modules/maybe/package.json
@@ -36,8 +36,7 @@
     "@yafu/eslint-config-yafu": "^1.2.0",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
-    "rollup": "^3.20.2",
-    "typescript": "^4.9.3"
+    "rollup": "^3.20.2"
   },
   "publishConfig": {
     "access": "public"
