--- a/modules/create-rollup-config/package.json
+++ b/modules/create-rollup-config/package.json
@@ -12,7 +12,6 @@
     "esbuild": "^0.17.15",
     "rollup": "^3.20.2",
     "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "typescript": "^4.9.3"
+    "rollup-plugin-esbuild": "^5.0.0"
   }
 }
