--- a/modules/fantasy-array-polyfill/package.json
+++ b/modules/fantasy-array-polyfill/package.json
@@ -38,10 +38,9 @@
     "@types/node": "^18.11.18",
     "@yafu/create-rollup-config": "^1.2.1",
     "chai": "^4.3.6",
-    "eslint": "^8.32.0",
+    "eslint": "^8.48.0",
     "mocha": "^10.0.0",
-    "rollup": "^3.20.2",
-    "typescript": "^4.9.3"
+    "rollup": "^3.20.2"
   },
   "publishConfig": {
     "access": "public"
