--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -52,8 +52,7 @@
     "mocha": "^10.2.0",
     "rollup": "^3.20.2",
     "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "typescript": "^4.9.3"
+    "rollup-plugin-esbuild": "^5.0.0"
   },
   "publishConfig": {
     "access": "public"
