--- a/modules/fantasy-types/package.json
+++ b/modules/fantasy-types/package.json
@@ -30,8 +30,7 @@
     "@types/node": "^18.11.18",
     "@yafu/create-rollup-config": "^1.2.1",
     "@yafu/rollup-plugin-curry": "^1.1.1",
-    "rollup": "^3.20.2",
-    "typescript": "^4.9.3"
+    "rollup": "^3.20.2"
   },
   "publishConfig": {
     "access": "public"
