--- a/modules/reader-transforms/package.json
+++ b/modules/reader-transforms/package.json
@@ -37,10 +37,9 @@
     "@types/mocha": "^10.0.1",
     "@yafu/create-rollup-config": "^1.2.1",
     "chai": "^4.3.7",
-    "eslint": "^8.13.0",
+    "eslint": "^8.48.0",
     "mocha": "^10.2.0",
-    "rollup": "^3.8.1",
-    "typescript": "^4.9.3"
+    "rollup": "^3.8.1"
   },
   "publishConfig": {
     "access": "public"
