--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -43,8 +43,7 @@
     "mocha": "^10.2.0",
     "rollup": "^3.20.2",
     "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "typescript": "^4.9.3"
+    "rollup-plugin-esbuild": "^5.0.0"
   },
   "peerDependencies": {
     "@yafu/curry": "^1.0.0"
