--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -37,8 +37,7 @@
     "chai": "^4.3.7",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "rollup": "^3.20.2",
-    "typescript": "^4.9.3"
+    "rollup": "^3.20.2"
   },
   "publishConfig": {
     "access": "public"
