--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -45,27 +45,27 @@
     "@yafu/curry": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/register": "^7.18.9",
-    "@esbuild-kit/esm-loader": "^2.5.4",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@types/node": "^18.11.18",
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.14",
+    "@babel/register": "^7.22.5",
+    "@esbuild-kit/esm-loader": "^2.5.5",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@types/node": "^20.5.7",
     "@yafu/eslint-config-yafu": "^1.2.0",
     "@yafu/rollup-plugin-curry": "^1.1.1",
     "babel-plugin-add-module-exports": "^1.0.4",
     "camel-case": "^4.1.2",
-    "chai": "^4.3.7",
-    "glob": "^8.1.0",
-    "jsdoc": "^4.0.0",
+    "chai": "^4.3.8",
+    "glob": "^10.3.4",
+    "jsdoc": "^4.0.2",
     "mocha": "^10.2.0",
-    "rollup": "^3.20.2",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup": "^3.28.1",
+    "rollup-plugin-dts": "^6.0.1",
     "rollup-plugin-ts": "^3.2.0",
     "sort-dependencies": "^1.0.7",
     "source-map-support": "^0.5.21",
-    "yaml": "^2.2.1"
+    "yaml": "^2.3.2"
   },
   "publishConfig": {
     "access": "public"
