--- a/modules/reader-transforms/package.json
+++ b/modules/reader-transforms/package.json
@@ -13,7 +13,7 @@
   "main": "./dist/cjs/reader-transforms.cjs",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint lib/*.ts test/*.ts",
+    "lint": "lint-yafu",
     "prepublishOnly": "yarn clean && yarn transpile",
     "test": "yarn lint && yarn unit",
     "transpile": "rollup -c",
