--- a/modules/parallel/package.json
+++ b/modules/parallel/package.json
@@ -14,7 +14,7 @@
   "types": "./dist/parallel.d.ts",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint lib test",
+    "lint": "lint-yafu",
     "prepublishOnly": "yarn clean && yarn transpile",
     "test": "yarn lint && yarn unit",
     "transpile": "rollup -c",
