--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "nx run-many --target=clean --all && nx reset",
     "lint": "nx run-many --target=lint --all",
     "prepublishOnly": "pnpm clean && pnpm test",
+    "prettier": "prettier **/*.ts",
     "pretest": "pnpm i",
     "test": "nx run-many --target=test --all",
     "transpile": "nx run-many --target=transpile --all"
