--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "typescript": "^5.2.2",
     "yaml": "^2.3.2"
   },
+  "packageManager": "pnpm@8.15.9",
   "engines": {
-    "pnpm": "^8.0.0",
-    "yarn": "none"
-  },
-  "packageManager": "pnpm@8.15.9"
+    "pnpm": "^8.0.0"
+  }
 }
